GNOME Bugzilla – Bug 759523
combdetect: Fix value memory leak
Last modified: 2015-12-16 09:00:05 UTC
Fix memory leak ==21698== 84 bytes in 3 blocks are definitely lost in loss record 3,402 of 3,623 ==21698== at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so) ==21698== by 0x421CBE2: g_malloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==21698== by 0x4233281: g_slice_alloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==21698== by 0x41E9219: g_array_sized_new (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==21698== by 0x41E934F: g_array_new (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==21698== by 0x40EBF9A: gst_value_init_list_or_array (gstvalue.c:284) ==21698== by 0x41B1B7D: g_value_reset (in /usr/lib/i386-linux-gnu/libgobject-2.0.so.0.4002.0) ==21698== by 0x4D1343E: gst_comb_detect_transform_caps (gstcombdetect.c:156) ==21698== by 0x616CA1C: gst_base_transform_transform_caps (gstbasetransform.c:536) ==21698== by 0x6171CFA: gst_base_transform_default_query (gstbasetransform.c:757) ==21698== by 0x616EF5B: gst_base_transform_query (gstbasetransform.c:1622) ==21698== by 0x40A97F9: gst_pad_query (gstpad.c:3898)
Created attachment 317470 [details] [review] Fix gvalue memory leak
commit c5130b1dfe60134dcb8e0611fdc8dce1db1dc4e9 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Wed Dec 16 14:29:20 2015 +0900 combdetect: Fix value memory leak gvalue variable should be unset instead of reset. https://bugzilla.gnome.org/show_bug.cgi?id=759523