combdetect: Fix value memory leak

gvalue variable should be unset instead of reset.

https://bugzilla.gnome.org/show_bug.cgi?id=759523